# verbum

./: .gitignore  Cargo.toml  README.md  view-source_https___www.vatican.va_archive_ENG0839___P3.HTM
bible-scraper/: Cargo.toml
bible-scraper/src/: main.rs  model.rs  models.rs  the_new_american_bible.rs
bible-scraper/src/models/: chapter.rs  verse.rs
bible-scraper/src/the_new_american_bible/: books.yaml
